<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_profile">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textColor="@color/black"
                android:padding="10dp"
                android:id="@+id/name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:focusable="false"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                tools:ignore="LabelFor" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_small"
                android:textSize="@dimen/textSize_12"
                android:textColor="@color/black"
                android:background="@drawable/white_background_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAllCaps="false"
                android:padding="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/editName"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="@color/black"
                android:padding="10dp"
                android:id="@+id/email"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="7dp"
                android:layout_marginStart="15dp"
                android:focusable="false"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                tools:ignore="LabelFor" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_small"
                android:textSize="@dimen/textSize_12"
                android:textColor="@color/black"
                android:background="@drawable/white_background_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editName"
                android:textAllCaps="false"
                android:padding="0dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/editEmail"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_background_button"
                android:text="@string/update"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/editEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="15dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:id="@+id/updateProfile"
                android:visibility="visible"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_red_A400"
                android:text="@string/sign_out"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/updateProfile"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="15dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:drawablePadding="5dp"
                android:id="@+id/signOut"
                android:gravity="center"
                android:visibility="visible"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>